bug 772640 - fix for incorrect glyph positioning in multi-glyph RTL clusters generated by Graphite shaping. r=jdaggett